# name: test_complete_multiple_instance_task_form_work_item_next[integer-1]
  <class 'OrderedDict'> {
    'completeWorkItem': <class 'dict'> {
      'clientMutationId': None,
      'workItem': <class 'dict'> {
        'case': <class 'dict'> {
          'status': 'RUNNING',
          'workItems': <class 'dict'> {
            'edges': <class 'list'> [
              <class 'dict'> {
                'node': <class 'dict'> {
                  'addressedGroups': <class 'list'> [
                    'group-name',
                  ],
                  'status': 'READY',
                },
              },
              <class 'dict'> {
                'node': <class 'dict'> {
                  'addressedGroups': <class 'list'> [
                  ],
                  'status': 'COMPLETED',
                },
              },
              <class 'dict'> {
                'node': <class 'dict'> {
                  'addressedGroups': <class 'list'> [
                  ],
                  'status': 'COMPLETED',
                },
              },
            ],
            'totalCount': 3,
          },
        },
        'status': 'COMPLETED',
      },
    },
  }
---
# name: test_complete_work_item_last[ready-running-None-None-simple-None]
  <class 'OrderedDict'> {
    'completeWorkItem': <class 'dict'> {
      'clientMutationId': None,
      'workItem': <class 'dict'> {
        'case': <class 'dict'> {
          'closedByUser': 'admin',
          'status': 'COMPLETED',
        },
        'closedByUser': 'admin',
        'status': 'COMPLETED',
      },
    },
  }
---
# name: test_complete_work_item_last[ready-running-completed-None0-simple-None]
  <class 'OrderedDict'> {
    'completeWorkItem': <class 'dict'> {
      'clientMutationId': None,
      'workItem': <class 'dict'> {
        'case': <class 'dict'> {
          'closedByUser': 'admin',
          'status': 'COMPLETED',
        },
        'closedByUser': 'admin',
        'status': 'COMPLETED',
      },
    },
  }
---
# name: test_complete_work_item_last[ready-running-completed-None1-simple-None]
  <class 'OrderedDict'> {
    'completeWorkItem': <class 'dict'> {
      'clientMutationId': None,
      'workItem': <class 'dict'> {
        'case': <class 'dict'> {
          'closedByUser': 'admin',
          'status': 'COMPLETED',
        },
        'closedByUser': 'admin',
        'status': 'COMPLETED',
      },
    },
  }
---
# name: test_complete_work_item_with_next[["some-group"]|groups-False-ready-None-simple-work_item__controlling_groups0-work-item-creating-group-case-creating-group]
  <class 'OrderedDict'> {
    'completeWorkItem': <class 'dict'> {
      'clientMutationId': None,
      'workItem': <class 'dict'> {
        'case': <class 'dict'> {
          'status': 'RUNNING',
          'workItems': <class 'dict'> {
            'edges': <class 'list'> [
              <class 'dict'> {
                'node': <class 'dict'> {
                  'addressedGroups': <class 'list'> [
                  ],
                  'controllingGroups': <class 'list'> [
                    'controlling-group1',
                    'controlling-group2',
                  ],
                  'status': 'COMPLETED',
                },
              },
              <class 'dict'> {
                'node': <class 'dict'> {
                  'addressedGroups': <class 'list'> [
                    'some-group',
                  ],
                  'controllingGroups': <class 'list'> [
                    'some-group',
                  ],
                  'status': 'READY',
                },
              },
            ],
            'totalCount': 2,
          },
        },
        'status': 'COMPLETED',
      },
    },
  }
---
# name: test_complete_work_item_with_next[[]-False-ready-None-simple-work_item__controlling_groups0-work-item-creating-group-case-creating-group]
  <class 'OrderedDict'> {
    'completeWorkItem': <class 'dict'> {
      'clientMutationId': None,
      'workItem': <class 'dict'> {
        'case': <class 'dict'> {
          'status': 'RUNNING',
          'workItems': <class 'dict'> {
            'edges': <class 'list'> [
              <class 'dict'> {
                'node': <class 'dict'> {
                  'addressedGroups': <class 'list'> [
                  ],
                  'controllingGroups': <class 'list'> [
                    'controlling-group1',
                    'controlling-group2',
                  ],
                  'status': 'COMPLETED',
                },
              },
              <class 'dict'> {
                'node': <class 'dict'> {
                  'addressedGroups': <class 'list'> [
                  ],
                  'controllingGroups': <class 'list'> [
                  ],
                  'status': 'READY',
                },
              },
            ],
            'totalCount': 2,
          },
        },
        'status': 'COMPLETED',
      },
    },
  }
---
# name: test_complete_work_item_with_next[[]-True-ready-None-simple-work_item__controlling_groups0-work-item-creating-group-case-creating-group]
  <class 'OrderedDict'> {
    'completeWorkItem': <class 'dict'> {
      'clientMutationId': None,
      'workItem': <class 'dict'> {
        'case': <class 'dict'> {
          'status': 'RUNNING',
          'workItems': <class 'dict'> {
            'edges': <class 'list'> [
              <class 'dict'> {
                'node': <class 'dict'> {
                  'addressedGroups': <class 'list'> [
                  ],
                  'controllingGroups': <class 'list'> [
                    'controlling-group1',
                    'controlling-group2',
                  ],
                  'status': 'COMPLETED',
                },
              },
              <class 'dict'> {
                'node': <class 'dict'> {
                  'addressedGroups': <class 'list'> [
                  ],
                  'controllingGroups': <class 'list'> [
                  ],
                  'status': 'READY',
                },
              },
            ],
            'totalCount': 2,
          },
        },
        'status': 'COMPLETED',
      },
    },
  }
---
# name: test_complete_work_item_with_next[[info.case.created_by_group, info.work_item.created_by_group]-False-ready-None-simple-work_item__controlling_groups0-work-item-creating-group-case-creating-group]
  <class 'OrderedDict'> {
    'completeWorkItem': <class 'dict'> {
      'clientMutationId': None,
      'workItem': <class 'dict'> {
        'case': <class 'dict'> {
          'status': 'RUNNING',
          'workItems': <class 'dict'> {
            'edges': <class 'list'> [
              <class 'dict'> {
                'node': <class 'dict'> {
                  'addressedGroups': <class 'list'> [
                  ],
                  'controllingGroups': <class 'list'> [
                    'controlling-group1',
                    'controlling-group2',
                  ],
                  'status': 'COMPLETED',
                },
              },
              <class 'dict'> {
                'node': <class 'dict'> {
                  'addressedGroups': <class 'list'> [
                    'case-creating-group',
                    'fake-user-group',
                  ],
                  'controllingGroups': <class 'list'> [
                    'case-creating-group',
                    'fake-user-group',
                  ],
                  'status': 'READY',
                },
              },
            ],
            'totalCount': 2,
          },
        },
        'status': 'COMPLETED',
      },
    },
  }
---
# name: test_complete_work_item_with_next[[info.case.created_by_group, info.work_item.created_by_group]-True-ready-None-simple-work_item__controlling_groups0-work-item-creating-group-case-creating-group]
  <class 'OrderedDict'> {
    'completeWorkItem': <class 'dict'> {
      'clientMutationId': None,
      'workItem': <class 'dict'> {
        'case': <class 'dict'> {
          'status': 'RUNNING',
          'workItems': <class 'dict'> {
            'edges': <class 'list'> [
              <class 'dict'> {
                'node': <class 'dict'> {
                  'addressedGroups': <class 'list'> [
                  ],
                  'controllingGroups': <class 'list'> [
                    'controlling-group1',
                    'controlling-group2',
                  ],
                  'status': 'COMPLETED',
                },
              },
              <class 'dict'> {
                'node': <class 'dict'> {
                  'addressedGroups': <class 'list'> [
                    'case-creating-group',
                  ],
                  'controllingGroups': <class 'list'> [
                    'case-creating-group',
                    'fake-user-group',
                  ],
                  'status': 'READY',
                },
              },
              <class 'dict'> {
                'node': <class 'dict'> {
                  'addressedGroups': <class 'list'> [
                    'fake-user-group',
                  ],
                  'controllingGroups': <class 'list'> [
                    'case-creating-group',
                    'fake-user-group',
                  ],
                  'status': 'READY',
                },
              },
            ],
            'totalCount': 3,
          },
        },
        'status': 'COMPLETED',
      },
    },
  }
---
# name: test_complete_work_item_with_next[[info.case.created_by_group, info.work_item.created_by_group]|groups-False-ready-None-simple-work_item__controlling_groups0-work-item-creating-group-case-creating-group]
  <class 'OrderedDict'> {
    'completeWorkItem': <class 'dict'> {
      'clientMutationId': None,
      'workItem': <class 'dict'> {
        'case': <class 'dict'> {
          'status': 'RUNNING',
          'workItems': <class 'dict'> {
            'edges': <class 'list'> [
              <class 'dict'> {
                'node': <class 'dict'> {
                  'addressedGroups': <class 'list'> [
                  ],
                  'controllingGroups': <class 'list'> [
                    'controlling-group1',
                    'controlling-group2',
                  ],
                  'status': 'COMPLETED',
                },
              },
              <class 'dict'> {
                'node': <class 'dict'> {
                  'addressedGroups': <class 'list'> [
                    'case-creating-group',
                    'fake-user-group',
                  ],
                  'controllingGroups': <class 'list'> [
                    'case-creating-group',
                    'fake-user-group',
                  ],
                  'status': 'READY',
                },
              },
            ],
            'totalCount': 2,
          },
        },
        'status': 'COMPLETED',
      },
    },
  }
---
# name: test_complete_work_item_with_next[info.case.created_by_group-False-ready-None-simple-work_item__controlling_groups0-work-item-creating-group-case-creating-group]
  <class 'OrderedDict'> {
    'completeWorkItem': <class 'dict'> {
      'clientMutationId': None,
      'workItem': <class 'dict'> {
        'case': <class 'dict'> {
          'status': 'RUNNING',
          'workItems': <class 'dict'> {
            'edges': <class 'list'> [
              <class 'dict'> {
                'node': <class 'dict'> {
                  'addressedGroups': <class 'list'> [
                  ],
                  'controllingGroups': <class 'list'> [
                    'controlling-group1',
                    'controlling-group2',
                  ],
                  'status': 'COMPLETED',
                },
              },
              <class 'dict'> {
                'node': <class 'dict'> {
                  'addressedGroups': <class 'list'> [
                    'case-creating-group',
                  ],
                  'controllingGroups': <class 'list'> [
                    'case-creating-group',
                  ],
                  'status': 'READY',
                },
              },
            ],
            'totalCount': 2,
          },
        },
        'status': 'COMPLETED',
      },
    },
  }
---
# name: test_complete_work_item_with_next[info.prev_work_item.controlling_groups-False-ready-None-simple-work_item__controlling_groups0-work-item-creating-group-case-creating-group]
  <class 'OrderedDict'> {
    'completeWorkItem': <class 'dict'> {
      'clientMutationId': None,
      'workItem': <class 'dict'> {
        'case': <class 'dict'> {
          'status': 'RUNNING',
          'workItems': <class 'dict'> {
            'edges': <class 'list'> [
              <class 'dict'> {
                'node': <class 'dict'> {
                  'addressedGroups': <class 'list'> [
                  ],
                  'controllingGroups': <class 'list'> [
                    'controlling-group1',
                    'controlling-group2',
                  ],
                  'status': 'COMPLETED',
                },
              },
              <class 'dict'> {
                'node': <class 'dict'> {
                  'addressedGroups': <class 'list'> [
                    'controlling-group1',
                    'controlling-group2',
                  ],
                  'controllingGroups': <class 'list'> [
                    'controlling-group1',
                    'controlling-group2',
                  ],
                  'status': 'READY',
                },
              },
            ],
            'totalCount': 2,
          },
        },
        'status': 'COMPLETED',
      },
    },
  }
---
# name: test_complete_work_item_with_next[info.work_item.created_by_group-False-ready-None-simple-work_item__controlling_groups0-work-item-creating-group-case-creating-group]
  <class 'OrderedDict'> {
    'completeWorkItem': <class 'dict'> {
      'clientMutationId': None,
      'workItem': <class 'dict'> {
        'case': <class 'dict'> {
          'status': 'RUNNING',
          'workItems': <class 'dict'> {
            'edges': <class 'list'> [
              <class 'dict'> {
                'node': <class 'dict'> {
                  'addressedGroups': <class 'list'> [
                  ],
                  'controllingGroups': <class 'list'> [
                    'controlling-group1',
                    'controlling-group2',
                  ],
                  'status': 'COMPLETED',
                },
              },
              <class 'dict'> {
                'node': <class 'dict'> {
                  'addressedGroups': <class 'list'> [
                    'fake-user-group',
                  ],
                  'controllingGroups': <class 'list'> [
                    'fake-user-group',
                  ],
                  'status': 'READY',
                },
              },
            ],
            'totalCount': 2,
          },
        },
        'status': 'COMPLETED',
      },
    },
  }
---
